# sentinel

./: Dockerfile  Procfile  README.md  pyproject.toml
.github/workflows/: test-and-deploy.yml
sentinel/: api.py  sentim.py
tests/: test_integration.py  test_regression.py  test_sentinel.py  test_unit.py
