[tool.poetry]
name = "sentinel"
version = "1.0.0"
description = ""
authors = ["Jake Gillespie <jdgillespie91@gmail.com>"]

[tool.poetry.dependencies]
fastapi = "^0.74.1"
python = "3.10.2"
requests = "^2.27.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
